refactoring: resolve most sonar issues