@@ -1,14 +1,14 @@
 package de.unistuttgart.iste.gits.content_service.service;
 
+import de.unistuttgart.iste.gits.content_service.persistence.dao.ContentEntity;
 import de.unistuttgart.iste.gits.content_service.persistence.dao.TagEntity;
+import de.unistuttgart.iste.gits.content_service.persistence.mapper.ContentMapper;
+import de.unistuttgart.iste.gits.content_service.persistence.repository.ContentRepository;
 import de.unistuttgart.iste.gits.content_service.persistence.repository.TagRepository;
+import de.unistuttgart.iste.gits.content_service.validation.ContentValidator;
 import de.unistuttgart.iste.gits.generated.dto.ContentDto;
 import de.unistuttgart.iste.gits.generated.dto.CreateContentInputDto;
 import de.unistuttgart.iste.gits.generated.dto.UpdateContentInputDto;
-import de.unistuttgart.iste.gits.content_service.persistence.dao.ContentEntity;
-import de.unistuttgart.iste.gits.content_service.persistence.mapper.ContentMapper;
-import de.unistuttgart.iste.gits.content_service.persistence.repository.ContentRepository;
-import de.unistuttgart.iste.gits.content_service.validation.ContentValidator;
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
@@ -27,38 +27,29 @@ public class ContentService {
     private final ContentMapper contentMapper;
     private final ContentValidator contentValidator;
 
-    public static class TagSynchronizationResult {
-        public final Collection<TagEntity> existingTagsToAdd;
-        public final Collection<TagEntity> newTagsToAdd;
-        public final Collection<TagEntity> existingTagsToRemove;
-
-        public TagSynchronizationResult(Collection<TagEntity> existingTagsToAdd,
-                                        Collection<TagEntity> newTagsToAdd,
-                                        Collection<TagEntity> existingTagsToRemove) {
-            this.existingTagsToAdd = existingTagsToAdd;
-            this.newTagsToAdd = newTagsToAdd;
-            this.existingTagsToRemove = existingTagsToRemove;
-        }
+    public record TagSynchronizationResult(Collection<TagEntity> existingTagsToAdd,
+                                           Collection<TagEntity> newTagsToAdd,
+                                           Collection<TagEntity> existingTagsToRemove) {
     }
 
     TagSynchronizationResult prepareSynchronization(List<String> tagNames,
                                                     List<TagEntity> currentTags,
                                                     List<TagEntity> existingTagsWithGivenNames) {
         Set<String> tagNamesSet = new HashSet<>(tagNames);
-        Set<String> currentTagNames = currentTags.stream().map(tag -> tag.getName()).collect(Collectors.toSet());
+        Set<String> currentTagNames = currentTags.stream().map(TagEntity::getName).collect(Collectors.toSet());
         Set<String> tagNamesToAdd = tagNamesSet.stream().filter(name -> !currentTagNames.contains(name)).collect(Collectors.toSet());
-        List<TagEntity> existingTagsToAdd = existingTagsWithGivenNames.stream().filter(tag -> tagNamesToAdd.contains(tag.getName())).collect(Collectors.toList());
-        Set<String> existingTagNames = existingTagsToAdd.stream().map(tag -> tag.getName()).collect(Collectors.toSet());
+        List<TagEntity> existingTagsToAdd = existingTagsWithGivenNames.stream().filter(tag -> tagNamesToAdd.contains(tag.getName())).toList();
+        Set<String> existingTagNames = existingTagsToAdd.stream().map(TagEntity::getName).collect(Collectors.toSet());
         Set<String> tagNamesToCreate = tagNamesToAdd.stream().filter(name -> !existingTagNames.contains(name)).collect(Collectors.toSet());
-        List<TagEntity> newTags = tagNamesToCreate.stream().map(TagEntity::fromName).collect(Collectors.toList());
+        List<TagEntity> newTags = tagNamesToCreate.stream().map(TagEntity::fromName).toList();
         Set<String> tagNamesToRemove = currentTagNames.stream().filter(name -> !tagNamesSet.contains(name)).collect(Collectors.toSet());
-        List<TagEntity> tagsToRemove = currentTags.stream().filter(tag -> tagNamesToRemove.contains(tag.getName())).collect(Collectors.toList());
-        return new TagSynchronizationResult(existingTagsToAdd,newTags,tagsToRemove);
+        List<TagEntity> tagsToRemove = currentTags.stream().filter(tag -> tagNamesToRemove.contains(tag.getName())).toList();
+        return new TagSynchronizationResult(existingTagsToAdd, newTags, tagsToRemove);
     }
 
     void synchronizeWithDatabase(ContentEntity content, TagSynchronizationResult tagSynchronizationResult) {
         // the prepareSynchronization created TagEntity instances for new tags but did not store them --> save them to the DB
-        Set<TagEntity> tagsToAdd = tagSynchronizationResult.newTagsToAdd.stream().map(tag -> tagRepository.save(tag)).collect(Collectors.toSet());
+        Set<TagEntity> tagsToAdd = tagSynchronizationResult.newTagsToAdd.stream().map(tagRepository::save).collect(Collectors.toSet());
         // the newly created tags and the existing tags which are not already assigned to the content need to be linked with the content
         // for n:m relationships the links have to be created on both sides, i.e. content -> tag and tag --> content
         tagsToAdd.addAll(tagSynchronizationResult.existingTagsToAdd);
@@ -68,7 +59,7 @@ public class ContentService {
             content.getTags().addAll(tagsToAdd);
         }
         for (TagEntity tag : tagsToAdd) {
-            if (tag.getContents()==null) {
+            if (tag.getContents() == null) {
                 tag.setContents(new HashSet<>(Set.of(content))); // TODO clarify if this can really happen or if an empty list is returned
             } else {
                 tag.getContents().add(content);
@@ -82,11 +73,11 @@ public class ContentService {
         }
     }
 
-    protected void synchronizeTags(ContentEntity content, List<String> tagNames){
+    protected void synchronizeTags(ContentEntity content, List<String> tagNames) {
         List<TagEntity> currentTags = tagRepository.findByContentId(content.getId());
-        List<TagEntity> existingTagsWithGivenNames = tagRepository.findByNames(tagNames);
+        List<TagEntity> existingTagsWithGivenNames = tagRepository.findByNameIn(tagNames);
         TagSynchronizationResult result = prepareSynchronization(tagNames, currentTags, existingTagsWithGivenNames);
-        synchronizeWithDatabase(content,result);
+        synchronizeWithDatabase(content, result);
     }
 
     public List<ContentDto> getAllContents() {
@@ -97,7 +88,7 @@ public class ContentService {
         contentValidator.validateCreateContentInputDto(contentInputDto);
         ContentEntity contentEntity = contentMapper.dtoToEntity(contentInputDto);
         contentEntity = contentRepository.save(contentEntity);
-        synchronizeTags(contentEntity,contentInputDto.getTagNames());
+        synchronizeTags(contentEntity, contentInputDto.getTagNames());
         return contentMapper.entityToDto(contentEntity);
     }
 
@@ -118,6 +109,7 @@ public class ContentService {
 
     /**
      * Checks if a Content with the given id exists. If not, an EntityNotFoundException is thrown.
+     *
      * @param id The id of the Content to check.
      * @throws EntityNotFoundException If a Content with the given id does not exist.
      */
@@ -128,7 +120,7 @@ public class ContentService {
     }
 
     public List<ContentDto> getContentsById(List<UUID> ids) {
-        return contentRepository.findById(ids).stream().map(contentMapper::entityToDto).toList();
+        return contentRepository.findByIdIn(ids).stream().map(contentMapper::entityToDto).toList();
     }
 
     public List<List<ContentDto>> getContentsByChapterIds(List<UUID> chapterIds) {
@@ -136,13 +128,13 @@ public class ContentService {
 
         // get a list containing all contents with a matching chapter id, then map them by chapter id (multiple
         // contents might have the same chapter id)
-        Map<UUID, List<ContentDto>> contentsByChapterId = contentRepository.findByChapterIds(chapterIds).stream()
+        Map<UUID, List<ContentDto>> contentsByChapterId = contentRepository.findByChapterIdIn(chapterIds).stream()
                 .map(contentMapper::entityToDto)
                 .collect(Collectors.groupingBy(ContentDto::getChapterId));
 
         // put the different groups of chapters into the result list such that the order matches the order
         // of chapter ids given by the chapterIds argument
-        for(UUID chapterId : chapterIds) {
+        for (UUID chapterId : chapterIds) {
             List<ContentDto> contents = contentsByChapterId.getOrDefault(chapterId, Collections.emptyList());
 
             result.add(contents);
@@ -155,11 +147,11 @@ public class ContentService {
         requireContentExisting(id);
         ContentEntity content = contentRepository.getReferenceById(id);
         // The repository should return at most one tag as one content should not have multiple tags with the same name
-        List<TagEntity> currentTagsWithThisName = tagRepository.findByContentIdAndTagName(content.getId(),tagName);
-        if (currentTagsWithThisName.size() == 0) {
+        List<TagEntity> currentTagsWithThisName = tagRepository.findByContentIdAndTagName(content.getId(), tagName);
+        if (currentTagsWithThisName.isEmpty()) {
             List<TagEntity> existingTags = tagRepository.findByName(tagName);
-            TagEntity tagEntity = null;
-            if (existingTags.size() == 0) {
+            TagEntity tagEntity;
+            if (existingTags.isEmpty()) {
                 // There is no tag with this name
                 tagEntity = TagEntity.fromName(tagName);
                 tagRepository.save(tagEntity);
@@ -176,7 +168,7 @@ public class ContentService {
         requireContentExisting(id);
         ContentEntity content = contentRepository.getReferenceById(id);
         // The repository should return at most one tag as one content should not have multiple tags with the same name
-        List<TagEntity> currentTagsWithThisName = tagRepository.findByContentIdAndTagName(content.getId(),tagName);
+        List<TagEntity> currentTagsWithThisName = tagRepository.findByContentIdAndTagName(content.getId(), tagName);
         for (TagEntity tagEntity : currentTagsWithThisName) {
             content.removeFromTags(tagEntity);
             tagEntity.removeFromContents(content);
